# htmx_django_template

./: .envrc.example  .gitignore  README.md  docker-compose.yml  pyproject.toml  remake_container.sh  start.sh
nginx/: nginx.conf
web/: Dockerfile  pyproject.toml
web/config/: settings.py  urls.py
web/sample/: admin.py  factories.py  models.py  schema.py  views.py
web/sample/management/commands/: sample_command.py
web/sample/migrations/: 0001_initial.py
web/sample/tests/: test_commands.py  test_views.py
web/stock/: urls.py  views.py
web/templates/: base.html
web/templates/sample/: index.html
web/templates/stock/: clicked.html  index.html
