[project]
name = "htmx-django"
version = "0.1.0"
description = "A Django project using HTMX"
readme = "README.md"

requires-python = ">=3.13,<3.14"
dependencies = [
    "Django==5.2.8",
]

[dependency-groups]
dev = [
    "django-stubs[compatible-mypy]==5.2.7",
    "djlint==1.36.4",
    "mypy==1.18.2",
    "pytest==9.0.1",
    "pytest-django==4.11.1",
    "ruff==0.14.4",
]

[tool.mypy]
plugins = ["mypy_django_plugin.main"]
mypy_path = "web"

[tool.django-stubs]
django_settings_module = "web.config.settings"
