[project]
name = "htmx-django"
version = "0.1.0"
description = "A Django project using HTMX"
readme = "README.md"

requires-python = ">=3.13,<3.14"
dependencies = [
    "Django==5.2.9",
    "django-htmx==1.27.0",
    "psycopg2==2.9.11",
]

[dependency-groups]
dev = [
    "ruff==0.14.8",
    "pytest==9.0.1",
    "django-debug-toolbar==6.1.0",
    "pytest-django==4.11.1",
    "factory-boy==3.3.3",
    "djlint==1.36.4",
    "mypy>=1.19.0",
    "django-stubs[compatible-mypy]==5.2.8",
    "djcheckup>=0.5.0",
]

[tool.uv]
link-mode = "copy"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
python_version = "3.13"
plugins = ["mypy_django_plugin.main"]
explicit_package_bases = true

[tool.django-stubs]
django_settings_module = "config.settings"

[[tool.mypy.overrides]]
module = ["debug_toolbar.*"]
ignore_missing_imports = true

[tool.ruff.lint]
ignore = [
]

select = [
   "I",
]
